# sdlcross-SDL3-mixer-image-ttf-with-bats

./: .gitignore  CMakeLists.txt  README.md  build-web.bat  config-exe.bat  config-web.bat  install-apk.bat  run-exe.bat
.github/workflows/: main.yml
app/: build.gradle
app/libs/: SDL3_mixer-3.1.0.aar
app/src/main/: AndroidManifest.xml
libs/SDL-3.3.0-mingw/lib/pkgconfig/: sdl3.pc
libs/SDL-3.3.0-wasm/lib/cmake/SDL3/: SDL3staticTargets.cmake
libs/SDL-3.3.0-wasm/lib/pkgconfig/: sdl3.pc
libs/SDL3_image-3.2.4-wasm/lib/pkgconfig/: sdl3-image.pc
libs/SDL3_mixer-3.1.0-mingw/lib/pkgconfig/: sdl3-mixer.pc
libs/SDL3_mixer-3.1.0-wasm/lib/cmake/SDL3_mixer/: SDL3_mixer-static-targets-relwithdebinfo.cmake  SDL3_mixer-static-targets.cmake
libs/SDL3_mixer-3.1.0-wasm/lib/pkgconfig/: sdl3-mixer.pc
libs/SDL3_ttf-3.2.2-wasm/lib/cmake/SDL3_ttf/: SDL3_ttf-static-targets-minsizerel.cmake  SDL3_ttf-static-targets.cmake
libs/SDL3_ttf-3.2.2-wasm/lib/pkgconfig/: sdl3-ttf.pc
libs/freetype-2.13.3-prefix/web/lib/pkgconfig/: freetype2.pc
libs/freetype-2.13.3-prefix/win/lib/cmake/freetype/: freetype-config-minsizerel.cmake
libs/freetype-2.13.3-prefix/win/lib/pkgconfig/: freetype2.pc
public/: index.html
src/: main.c
